Added Docker file from Debruyne git

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #######################################
 data/
 
+# Test perso à ne pas mettre sur le git
+breweries.csv
+
 # Compiled source #
 ###################
 *.com
