--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ data/
 
 # Test perso à ne pas mettre sur le git
 breweries.csv
-ChallA.csv	
+ChallA.csv
+*.csv	
 
 # Compiled source #
 ###################
